Search and Update Logic Added

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div> 
-        <h1>Employee Information Inserted Successfully</h1>
+        <h1>Employee Information Inserted/updated Successfully</h1>
     </div>
 </body>
 </html>
